<resources>
    <string name="app_name">List of products</string>
    <string name="btn_add_product">Add product</string>
    <string name="btn_delete_product">Clear products</string>
    <string name="et_id_hint">Id</string>
    <string name="et_name_hint">Name</string>
    <string name="et_description_hint">Description</string>
    <string name="et_price_hint">Price</string>
    <string name="btn_swt_all_text">Buy all</string>
</resources>
