<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_name_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/et_name_hint" />

            <EditText
                android:id="@+id/et_description_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_description_hint"
                android:inputType="textPersonName"
                android:lines="3" />

            <EditText
                android:id="@+id/et_price_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/et_price_hint" />

            <ImageView
                android:id="@+id/iv_image_product"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"/>

        </LinearLayout>

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_revert" />

</android.support.design.widget.CoordinatorLayout>